# strava-training-advisor

./: .env.example  .gitignore  .last_activity_id  IMPROVEMENTS.md  README.md  athlete_profile.yaml  main.py  pyproject.toml  races.yaml
.github/workflows/: strava-monitor.yml
scripts/: check_new_activities.py  run_advisor.py  setup_oauth.py  weekly_summary.py
src/: advisor.py  analyzer.py  athlete_profile.py  models.py  notifier.py  race_manager.py  report.py  strava_client.py
